[gd_scene load_steps=10 format=3 uid="uid://duchss15jdix1"]

[ext_resource type="Script" uid="uid://bkm3aafrxcd2t" path="res://script/warp.gd" id="1_dql4g"]
[ext_resource type="PackedScene" uid="uid://be0cbrh4ogbni" path="res://scenes/panneau.tscn" id="1_sdcqm"]
[ext_resource type="PackedScene" uid="uid://ob8ee2f8nyuc" path="res://scenes/Perso_principal.tscn" id="2_dql4g"]
[ext_resource type="PackedScene" uid="uid://cpkhdgwavmpuc" path="res://scenes/panneau_dialogue.tscn" id="3_ht3ym"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tbgi4"]
b = Vector2(1920, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_sugp2"]
a = Vector2(0, 1080)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jyhfs"]
a = Vector2(9, 0)
b = Vector2(1929, -1)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tefeu"]
a = Vector2(0, 1080)
b = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tv06q"]
size = Vector2(162, 456.5)

[node name="Main" type="Node2D"]
script = ExtResource("1_dql4g")
next_scene_right = "res://scenes/plaine.tscn"

[node name="Panneau" parent="." instance=ExtResource("1_sdcqm")]
position = Vector2(575, 517)

[node name="Joueur_P" parent="." instance=ExtResource("2_dql4g")]
position = Vector2(900, 512)

[node name="panneau_lecture" parent="." instance=ExtResource("3_ht3ym")]
position = Vector2(909, 658)

[node name="Map Border" type="StaticBody2D" parent="."]
collision_priority = 20.0

[node name="Lim N" type="CollisionShape2D" parent="Map Border"]
shape = SubResource("SegmentShape2D_tbgi4")

[node name="Lim E" type="CollisionShape2D" parent="Map Border"]
position = Vector2(1920, 0)
shape = SubResource("SegmentShape2D_sugp2")

[node name="Lim S" type="CollisionShape2D" parent="Map Border"]
position = Vector2(-9, 1080)
shape = SubResource("SegmentShape2D_jyhfs")

[node name="Lim O" type="CollisionShape2D" parent="Map Border"]
shape = SubResource("SegmentShape2D_tefeu")

[node name="exit" type="Area2D" parent="."]
position = Vector2(28, 24)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(1805, 525)
shape = SubResource("RectangleShape2D_tv06q")

[node name="SpawnerRight" type="Marker2D" parent="."]
position = Vector2(1493, 549)

[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
